# cpu_benchmark

./: .gitignore  DEVELOPMENT.md  benchmark.py  benchmark.sh  benchmark_gpu.py  consolidated_analysis.md  cpu_results_analysis.ipynb  driver.sh  driver_scaling_wide.sh  generate_notebook.py  gpu_benchmark_output.txt  gpu_results_analysis.ipynb  results.csv  run_gpu_benchmarks.sh  scaling_summary.md
provider_bench/: .gitignore  CMakeLists.txt  analysis.ipynb  benchmark_solver.cpp  build.sh  create_notebook.py  final_c23mm_analysis.ipynb  final_devel_analysis.ipynb  generate_devel_stats.py  generate_final_analysis.py  provider_results.ipynb  run_bench.sh  run_bench_single.sh  slurm_build.sh  submit_benchmarks.py  test.sh
provider_bench/diagnostics/: mpi_rank_dispatch.sh  mpi_startup_probe.cpp  mpi_startup_stress.sbatch
provider_bench/results_c23ml/scripts/: SS_TPQ96_I1_B96_MULTI_giant.sh
provider_bench/results_c23mm/: AIX.csv  PHYDLL_CPP_DLR96_I1.csv  PHYDLL_PY_DLR96_I1.csv  SINGLE_SS_DEFAULT.csv  SINGLE_SS_TPQ1_I96_B96.csv  SINGLE_SS_TPQ1_I96_NOBIND.csv  SINGLE_SS_TPQ48_I2_B96.csv  SINGLE_SS_TPQ96_I1_B96.csv  SS_DEFAULT.csv  SS_TPQ12_I8_B96.csv  SS_TPQ1_I1_B96.csv  SS_TPQ1_I1_NOBIND.csv  SS_TPQ1_I96_B96_BATCH10.csv  SS_TPQ1_I96_B96_BATCH100.csv  SS_TPQ24_I4_B96.csv  SS_TPQ2_I48_B96.csv  SS_TPQ48_I2_B96.csv  SS_TPQ4_I24_B96.csv  SS_TPQ96_I1_B96.csv  SS_TPQ96_I1_B96_BATCH10.csv  SS_TPQ96_I1_B96_BATCH100.csv  SS_TPQ96_I1_B96_MULTI.csv  SS_TPQ96_I1_NOBIND.csv
provider_bench/results_c23mm/scripts/: PHYDLL_CPP_DLR96_I1.sh  PHYDLL_PY_DLR96_I1.sh  run_phydll_c23mm.sh
provider_bench/results_devel/: provider_stats.csv  provider_sweep.csv
provider_bench/results_devel/scripts/: run_devel_sweep.sh
provider_bench/results_devel/smartsim_experiments_2090000/smartsim_orchestrator_1784519226/orchestrator/: orchestrator_0.err  orchestrator_0.out
provider_bench/results_devel/smartsim_experiments_2090023/smartsim_orchestrator_1784519272/orchestrator/: orchestrator_0.err  orchestrator_0.out
provider_bench/results_devel/smartsim_experiments_2090024/smartsim_orchestrator_1784519317/orchestrator/: orchestrator_0.err  orchestrator_0.out
provider_bench/results_devel/smartsim_experiments_2090033/smartsim_orchestrator_1784519362/orchestrator/: orchestrator_0.err  orchestrator_0.out
provider_bench/results_devel/smartsim_experiments_2090041/smartsim_orchestrator_1784519407/orchestrator/: orchestrator_0.err  orchestrator_0.out
provider_bench/results_devel/smartsim_experiments_2090049/smartsim_orchestrator_1784519451/orchestrator/: orchestrator_0.err  orchestrator_0.out
provider_bench/results_devel/smartsim_experiments_2090055/smartsim_orchestrator_1784519495/orchestrator/: orchestrator_0.err  orchestrator_0.out
provider_bench/results_devel/smartsim_experiments_2090061/smartsim_orchestrator_1784519547/orchestrator/: orchestrator_0.err  orchestrator_0.out
provider_bench/results_devel/smartsim_experiments_2090081/smartsim_orchestrator_1784519593/orchestrator/: orchestrator_0.err  orchestrator_0.out
provider_bench/results_devel/smartsim_experiments_2090088/smartsim_orchestrator_1784519637/orchestrator/: orchestrator_0.err  orchestrator_0.out
provider_bench/results_devel/smartsim_experiments_2090097/smartsim_orchestrator_1784519681/orchestrator/: orchestrator_0.err  orchestrator_0.out
provider_bench/results_devel/smartsim_experiments_2090219/smartsim_orchestrator_1784521393/orchestrator/: orchestrator_0.err  orchestrator_0.out
provider_bench/results_devel/smartsim_experiments_2091001/smartsim_orchestrator_1784523195/orchestrator/: orchestrator_0.err  orchestrator_0.out
provider_bench/results_devel/smartsim_experiments_2091320/smartsim_orchestrator_1784524942/orchestrator/: orchestrator_0.err  orchestrator_0.out
provider_bench/results_devel/smartsim_experiments_2091343/smartsim_orchestrator_1784526692/orchestrator/: orchestrator_0.err  orchestrator_0.out
provider_bench/results_devel/smartsim_experiments_2091388/smartsim_orchestrator_1784528466/orchestrator/: orchestrator_0.err  orchestrator_0.out
provider_bench/results_devel/smartsim_experiments_2091498/smartsim_orchestrator_1784530176/orchestrator/: orchestrator_0.err  orchestrator_0.out
(+1052 files in other folders)
